Use Boolean.valueOf instead of boolean constructor.